# secrust-santa

./: .gitignore  Cargo.toml  LICENSE  README.md
back/: .env.sample  Cargo.toml  docker-compose.yaml
back/migrations/2021-12-10-105549_create_mvp_model/: down.sql  up.sql
back/src/: main.rs  models.rs  schema.rs  session.rs
