[package]
name = "back"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "uuid"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuid"] }
dotenv = "0.15.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
